--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,20 @@
-name: Hugo
-on: [push]
-jobs:
+name: Build and Deploy
+on:
+  push:
+    branches:
+      - master
+    schedule:
+    - cron: "0 0 * * *"
 
+jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
     steps:
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
-        with:
-          submodules: true  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-
-      - name: Hugo setup
-        uses: peaceiris/actions-hugo@v2.4.12
-        with:
-          # The Hugo version to download (if necessary) and use. Example: 0.58.2
-          hugo-version: latest # optional, default is latest
-          # Download (if necessary) and use Hugo extended version. Example: true
-          extended: false # optional, default is false
-
-      - name: Build
-        run: hugo
-
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
+   - name: Build
+        run: hugo     
+    - uses: pulimento/github-action-hugo-deploy-to-firebase@master
+      with:
+        firebase-token: ${{ secrets.secret_firebase_token }}
