--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           name: public
           path: public
       - name: build
-        uses: hugo
+        run: hugo
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
