--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,24 @@
-name: Build and Deploy
+name: Build pakai cron
 on:
-  push:
-    branches:
-      - master
     schedule:
     - cron: "0 0 * * *"
     
 jobs:
-  build:
-    name: Build
+  build and deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
-      - name: Install Dependencies
-        run: npm install
-      - name: Build
-        run: npm run build --prod
-      - name: build
+        
+      - name: Setup hugo
+        run: peaceiris/actions-hugo@v2
+        with: 
+          hugo version: "latest"
+        
+      - name: Jalankan hugo
         run: hugo
-      - name: Archive Production Artifact
-        uses: actions/upload-artifact@master
-        with:
-          name: public
-          path: public
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@master
-      - name: Download Artifact
-        uses: actions/download-artifact@master
-        with:
-          name: public
-          path: public
+        
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
