--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
 name: Build pakai cron
 on:
+  push:
+    branches:
+      - master
+    schedule:
+    - cron: "0 0 * * *"
     
 jobs:
   build and deploy:
