--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup hugo
         run: peaceiris/actions-hugo@v2
         with: 
-          hugo version: "latest"
+          hugo version: '0.85.0'
         
       - name: Jalankan hugo
         run: hugo
