--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,29 @@
-name: Build pakai cron
+name: Build and Deploy
 on:
   push:
     branches:
       - master
     schedule:
-    - cron: "0 0 * * *"
-    
+    - cron: "*/5 * * * *"
+
 jobs:
-  build and deploy:
-    name: Build and Deploy
-    runs-on: [ ubuntu-latest ]
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@master
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
         
-      - name: Setup hugo
+    - name: Setup hugo
         run: peaceiris/actions-hugo@v2
         
-      - name: Jalankan hugo
+    - name: Jalankan hugo
         run: hugo
         
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+    - uses: pulimento/github-action-hugo-deploy-to-firebase@master
+      with:
+        firebase-token: ${{ secrets.secret_firebase_token }}
+
+        
+
+
