--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,10 @@ jobs:
       with:
         submodules: true
         
-    - name: Setup hugo
-        run: peaceiris/actions-hugo@v2
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.85.0'
         
     - name: Jalankan hugo
         run: hugo
