--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,19 +13,7 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
-        
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: '0.85.0'
-        
-    - name: Jalankan hugo
-        run: hugo
-        
     - uses: pulimento/github-action-hugo-deploy-to-firebase@master
       with:
-        firebase-token: ${{ secrets.FIREBASE_TOKEN }}
-
-        
-
+        firebase-token: ${{ secrets.firebase_token }}
 
