--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,34 @@
-name: Build and Deploy
+name: GitHub Pages
+
 on:
   push:
     branches:
-      - master
-    schedule:
-    - cron: "*/5 * * * *"
+     - master
+  # schedule:
+  #   # Run on the hour
+  #   - cron: '0 * * * *'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-deploy:
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v1                  
+
+    - name: Install Ruby Dev                     
+      run: sudo apt-get install ruby-dev
+
+    - name: Install AsciiDoctor and Rouge
+      run: sudo gem install asciidoctor rouge
+
+    - name: Setup Hugo                           
+      uses: peaceiris/actions-hugo@v2
       with:
-        submodules: true
-    - uses: pulimento/github-action-hugo-deploy-to-firebase@master
+        hugo-version: '0.75.1'
+
+    - name: Build                                
+      run: hugo
+      
+    - name: ke firebase
+      uses: pulimento/github-action-hugo-deploy-to-firebase@master
       with:
         firebase-token: ${{ secrets.firebase_token }}
-
